--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,1 +1,590 @@
-/* Here be css.foo */
+@import url('https://fonts.googleapis.com/css2?family=Oxanium:wght@200;300&display=swap');
+@import url('https://fonts.cdnfonts.com/css/agencyfb-2');
+@import url('https://fonts.googleapis.com/css?family=Electrolize');
+
+/*  RESET --------------------------------------------
+*/  *:before, *:after, *, ::after, ::before {box-sizing: border-box;}
+    body {padding: 0; margin: 0;}
+    body,html,iframe,app-container {
+    background-color: var(--bg-color);
+  }
+
+
+/*  LAYOUT | Vertical --------------------------------
+*/  :root {
+      --app-container-grid-template-rows:
+        auto auto 1fr auto;
+        /* auto auto 1fr minmax(1rem, 7rem) minmax(1rem, 7rem); */
+      --nav-justify-content: start;
+      --nav-border-radius: .25rem .25rem 0 0;
+      --main-margin-block: -1rem 0;
+      --main-margin-inline: 0 0;
+      --main-border-radius: 0 .3rem .3rem .3rem;
+      --tab-grid-auto-flow: column;
+      --sub-header-display: none;
+      --grid-gap: 1rem;
+      --aside-display: none;
+      --stroke-opacity: 1;
+    }
+
+
+/*  LAYOUT | Vertical SMALL SCREENS ------------------
+*/  @media (width <= 400px) {
+      :root {
+        --nav-justify-content: auto;
+        --nav-border-radius: .25rem;
+        --tab-grid-auto-flow: column;
+        --main-border-radius: .3rem;
+        /*  */
+      }
+    }
+
+
+/*  LAYOUT | Horizontal ------------------------------
+*/  @media (width >= 600px) {
+      :root:has(#toggleLayout:checked) {
+        --app-container-grid-template-columns: 10rem 1fr 15rem;
+        --app-container-grid-template-rows: auto 1fr 1fr auto;
+        --nav-border-radius: .25rem 0 0 .25rem;
+        --nav-justify-content: auto;
+        --main-margin-inline: -1rem 0;
+        --main-margin-block: 0 0;
+        --main-resize-h: horizontal;
+        --main-border-radius: .3rem;
+        --aside-resize-v: vertical;
+        --tab-grid-auto-flow: row;
+        --sub-header-display: grid;
+        --grid-row-span: span 2;
+        --aside-display: grid;
+      }
+    }
+
+
+/*  THEME | Dark ----------------------------------
+*/  :root {
+      --bg-color: 19,20,23;
+      --bg-opacity: 1.0;
+      --bg-02-color: 39,49,54;
+      --bg-02-opacity: 1.0;
+      --bg-panel-color: 255,255,255;
+      --bg-panel-opacity: 0.05;
+      --bg-active-color: 255,255,255;
+      --bg-active-opacity: 0.05;
+      --bg-accent-color: 48,190,255;
+      --bg-accent-opacity: 0.5;
+      --bg-grd: linear-gradient(180deg,
+                rgba(50,70,80,0.9) 0,
+                #0d101b 100%);
+      --txt-color: 255,255,255;
+      --txt-opacity: 0.7;
+      --txt-active: 255,255,255;
+      --txt-active-opacity: 1.0;
+      --txt-link: 102,204,255;
+      --txt-link-opacity: .5;
+      --txt-muted: 255,255,255;
+      --txt-muted-opacity: 0.5;
+      --txt-shadow: -1px 1px rgba(var(--txt-shadow-color),
+        var(--txt-shadow-opacity));
+      --txt-shadow-color: 0,0,0;
+      --txt-shadow-opacity: 1.0;
+    }
+
+
+/*  THEME | Light ----------------------------------
+*/  @media (prefers-color-scheme: dark) {
+      :root:has(#toggleTheme:checked) {
+        --bg-logo-opacity: 0.15;
+        --bg-color: 0,0,0;
+        --bg-opacity: 0.8;
+        --bg-02-color: 0,0,0;
+        --bg-02-opacity: 0.5;
+        --bg-panel-color: 255,255,255;
+        --bg-panel-opacity: 0.2;
+        --bg-active-color: 255,255,255;
+        --bg-active-opacity: 0.2;
+        --bg-grd: linear-gradient(180deg,
+                  rgba(255,255,255,0.7) 0,
+                  rgba(255,255,255,0.4) 100%);
+        --txt-color: 0,0,0;
+        --txt-opacity: 1.0;
+        --txt-active: 0,0,0;
+        --txt-active-opacity: 1.0;
+        --txt-muted: 0,0,0;
+        --txt-muted-opacity: 0.5;
+        --txt-shadow: -1px 1px 0 rgba(var(--txt-shadow-color),
+          var(--txt-shadow-opacity));
+        --txt-shadow-color: 255,255,255;
+        --txt-shadow-opacity: 0.3;
+      }
+    }
+
+
+/*  WRAPPER ----------------------------------
+*/  app-container {
+      display: grid;
+      grid-template-rows: var(--app-container-grid-template-rows);
+      grid-template-columns: var(--app-container-grid-template-columns);
+      gap: var(--grid-gap);
+      padding: 1rem;
+      height: 100vh; /* push HEADER/FOOTER to the top/bottom of viewport */
+      overflow: hidden;
+    }
+
+/* @media (max-width: 800px) {
+  app-container {
+    grid-template-rows: auto auto 1fr minmax(1rem, 7rem) minmax(1rem, 7rem);
+    grid-template-columns: unset;
+  }
+  nav > panel-list {
+        grid-auto-flow: column !important;
+  }
+  main {
+    margin: -1rem 0 0 0 !important;
+  }
+  nav header, aside header, aside-2 header {
+    display: none !important;
+ }
+} */
+
+
+/*  ALL PANELS ----------------------------------
+*/  app-container > * {
+      display: grid;
+      background-color: rgba(var(--bg-panel-color),
+        var(--bg-panel-opacity));
+      overflow: hidden;
+      align-content: start;
+    }
+
+
+/*  NAV ----------------------------------
+*/  nav:has(#radio01:checked) ~ main #tab01,
+    nav:has(#radio02:checked) ~ main #tab02,
+    nav:has(#radio03:checked) ~ main #tab03,
+    nav:has(#radio04:checked) ~ main #tab04,
+    nav:has(#radio05:checked) ~ main #tab05,
+    nav:has(#radio06:checked) ~ main #tab06{display: grid;}
+
+    /* rounded corner for MAIN */
+    nav:not(:has(#radio01:checked)) ~ main {border-radius: .25rem;}
+
+    nav {
+      grid-row: var(--grid-row-span);
+      user-select: none;
+      background-color: transparent;
+      justify-content: var(--nav-justify-content);
+    }
+
+    nav > panel-list {grid-auto-flow: var(--tab-grid-auto-flow);}
+
+    nav label {
+      grid-template-columns: auto 1fr;
+      border-radius: var(--nav-border-radius);
+    }
+
+
+app-logo,
+powered-by,
+app-version,
+demo-buttons {padding: 1rem;}
+
+demo-buttons {cursor: pointer;}
+
+@media (width <= 600px) {
+  header label:first-of-type demo-buttons {display: none;}
+}
+
+
+/*  MAIN ----------------------------------
+*/  main {
+      grid-row: var(--grid-row-span);
+      margin-block: var(--main-margin-block);
+      margin-inline: var(--main-margin-inline);
+      border-radius: var(--main-border-radius);
+      /* resize: var(--main-resize-h); */
+    }
+
+
+/*  ASIDE ----------------------------------
+*/  aside {
+      display: var(--aside-display);
+      border-radius: .3rem;
+    }
+    /* aside {resize: var(--aside-resize-v);} */
+
+
+/*  ASIDE-2 ----------------------------------
+*/  aside-2 {
+      display: var(--aside-display);
+      border-radius: .3rem;
+    }
+
+
+/*  HEADER/FOOTER ----------------------------
+*/  header, footer {
+      display: grid;
+      grid-auto-flow: column;
+      grid-column: 1 / -1;
+      user-select: none;
+      border-radius: .3rem;
+    }
+
+    header {grid-template-columns: 1fr auto auto;}
+
+    header label {grid-template-columns: auto 1fr;}
+
+    footer {grid-template-columns: 1fr auto;}
+
+
+/*  SUB HEADERS -------------------------------
+*/  h4 {
+      display: var(--sub-header-display);
+      padding-left: 1rem;
+      letter-spacing: .05rem;
+      color: ;
+    }
+
+
+/*  LIST ITEMS ---------------------------------
+*/  list-item {
+      display: grid;
+      grid-auto-flow: column;
+    }
+
+
+/*  LABELS -------------------------------------
+*/  label {
+      display: grid;
+      grid-auto-flow: column;
+    }
+
+    label:hover,
+    label:has(> input:checked) {
+      background-color: rgba(var(--bg-active-color),
+        var(--bg-active-opacity));
+      color: rgba(var(--txt-active),
+        var(--txt-active-opacity));
+    }
+
+
+/* AUTO COLUMNS ---------------------------------- */
+
+/* 2 Children
+:where(label, list-item):has(>
+:last-child:nth-child(2)) {
+  grid-template-columns: auto 1fr;
+} */
+
+/* 3 Children
+:where(label, list-item):has(>
+:last-child:nth-child(3)) {
+  grid-template-columns: 1fr auto auto;
+} */
+
+/* 4 Children
+:where(label, list-item):has(> :last-child:nth-child(4)) {
+  grid-template-columns: auto 1fr auto auto;
+} */
+
+
+/* TABS ---------------------------------- */
+panel-tab {
+  overflow: hidden;
+  display: none;
+}
+
+
+/* LOW LEVEL ELEMENTS ---------------------------------- */
+
+/* Scrollable */
+panel-list {
+  display: grid;
+  overflow: overlay;
+  position: relative;
+  background:
+    /* cover */
+    linear-gradient(var(--bg-panel-color) 33%,
+      rgba(var(--bg-panel-color),0.0)),
+    linear-gradient(rgba(var(--bg-panel-color),0.0),
+      var(--bg-panel-color) 66%) 0 100%,
+    /* drop-shadow */
+    radial-gradient(farthest-side at 50% 0,
+      rgba(0,0,0,0.5), rgba(0,0,0,0.0)),
+    radial-gradient(farthest-side at 50% 100%,
+      rgba(0,0,0,0.5), rgba(0,0,0,0.0)) 0 100%;
+  background-color: rgba(var(--bg-panel-color),--bg-panel-opacity);
+  background-repeat: no-repeat;
+  background-attachment: local, local, scroll, scroll;
+  background-size: 100% 36px, 100% 36px, 100% 5px, 100% 5px;
+}
+
+list-cell {padding: .5rem 1rem;}
+
+p {padding: 0 1rem;}
+
+meta-data {
+  font-size: 0.8rem;
+  opacity: 0.5;
+  font-stretch: 100;
+  font-style: italic;
+  letter-spacing: 0.04rem;
+}
+
+input {
+  display: none;
+  accent-color: rgba(var(--accent));
+}
+
+
+/* LOOK/FEEL ---------------------------------- */
+body {
+  background-color: rgba(var(--bg-color), var(--bg-opacity));
+  color: rgba(var(--txt-color), var(--txt-opacity));
+  font-family: 'Oxanium', 'Electrolize', sans-serif;
+  font-size: 1rem;
+  text-shadow: var(--txt-shadow);
+}
+html:before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 100vh;
+  z-index: -5;
+  background: var(--bg-grd);
+}
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 100vh;
+  background-attachment: initial;
+  background-color: transparent;
+  background-image: url('https://d7460n-app-with-resizer.pages.dev/assets/images/pattern.png');
+  background-size: 4.6875rem;
+  background-repeat: repeat;
+  z-index: -5;
+}
+html::after {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: -10;
+  height: 100vh;
+  background-color: rgba(var(--bg-02-color), var(--bg-02-opacity));
+  background-image: url('https://d7460n-app-with-resizer.pages.dev/assets/images/logo.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: inherit;
+  /* background-size: cover; */
+  background-size: 75% 75%;
+  opacity: var(--bg-logo-opacity);
+}
+
+
+/*  SCROLLBARS ----------------------------------
+*/  *::-webkit-scrollbar {display: block; width: 1rem;}
+    *::-webkit-scrollbar-button {display: none;}
+    *::-webkit-scrollbar-track {background-color: rgba(48,190,255,0.0);}
+    *::-webkit-scrollbar-track-piece {background-color: rgba(48,190,255,0.0);}
+    * {--scrollbar-color: rgba(48,190,255,0.0);}
+    *:hover, *:focus, *:focus-within {
+      --scrollbar-color: rgba(var(--bg-accent-color), var(--bg-accent-opacity)) !important;
+    }
+    *::-webkit-scrollbar-thumb {
+      background-color: rgba(48,190,255,0.0);
+      border: 5px solid transparent;
+      border-radius: 1.5rem;
+      box-shadow: 0.25rem 0 0 0.25rem var(--scrollbar-color) inset;
+    }
+    *::-webkit-scrollbar-thumb:hover {
+      background-color: var(--scrollbar-color);
+      border: 0 solid transparent;
+      box-shadow: none;
+    }
+
+  /* FIREFOX */
+  /* Target elements, not :root{} */
+  /* https://codeconvey.com/custom-scrollbar-css-for-all-browsers/ */
+  panel-list {
+    scrollbar-color: rgba(48,190,255,0.0) rgba(48,190,255,0.0); /* Thumb and track color */
+    scrollbar-width: thin; /* Track width */
+  }
+  panel-list:hover {scrollbar-color: rgba(48,190,255,0.3) rgba(48,190,255,0.0);}
+
+
+
+/*  MENUS --------------------------------------
+*/  label[for='oneMenu'] {position: relative;}
+
+    label[for='oneMenu']:hover menu {display: grid;}
+
+    menu {
+      position: absolute;
+      top: 20px;
+      list-style: none;
+      padding: 0;
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-template-rows: auto;
+    }
+
+    menu li {
+      list-style: none;
+      display: grid;
+    }
+
+.supported {display: none;}
+
+@supports(selector(:has(+ *))) {
+  .unsupported {display: none;}
+  .supported {display: block;}
+}
+
+span-bold {font-weight: 900;}
+
+iframe {background-color: transparent;}
+
+panel-list div {overflow: auto;}
+
+iframe section article img {
+  mix-blend-mode: multiply;
+  opacity: 50% !important;
+}
+
+a {
+  color: rgba(var(--txt-link), 0.7);
+  text-decoration: none;
+
+  box-shadow: 0 1px 0 rgba(0,255,255,0.0);
+  transition: all 250ms;
+}
+
+a:hover {
+  color: rgba(var(--txt-link), 1.0);
+  box-shadow: 0 1px 0 rgba(var(--txt-link),1.0);
+}
+
+/* loader */
+.loading {
+	width: 5rem;
+	height: 5rem;
+  display: grid;
+  align-self: center;
+  justify-self: center;
+}
+.loading::before,
+.loading::after {
+	content: '';
+	display: block;
+	position: absolute;
+	width: 4rem;
+	height: 4rem;
+	background-color: rgba(0,0,0,0.0);
+	border: 1rem solid rgba(102,204,255,1.0);
+	opacity: 0.3;
+	border-radius: 50%;
+}
+.loading::before {
+	border-left: 1rem solid rgba(0,0,0,0.0);
+	border-right: 1rem solid rgba(0,0,0,0.0);
+	animation: spin01 3000ms infinite ease alternate;
+}
+.loading::after {
+	border-left: 1rem solid rgba(0,0,0,0.0);
+	border-right: 1rem solid rgba(0,0,0,0.0);
+	border-top: 1rem solid rgba(0,0,0,0.0);
+	animation: spin02 4000ms infinite linear;
+}
+@keyframes spin01 {
+	0% {transform: rotate(0deg);}
+	100% {transform: rotate(720deg);}
+}
+@keyframes spin02 {
+	0% {transform: rotate(720deg);}
+	100% {transform: rotate(0deg);}
+}
+
+
+
+scroll-to-top {
+  width: 2.9rem;
+  height: 2.9rem;
+  border-radius: 50%;
+  /*background-color: #333;*/
+  box-shadow: inset 0 0 0 7px rgba(var(--bg-accent-color), 0.2);
+  /*border: 2px solid rgba(var(--bg-accent-color), 0.2);*/
+  box-sizing: border-box;
+  display: grid;
+  
+  position: sticky;
+  bottom: 1rem;
+  justify-self: end;
+  margin-inline-end: 1rem;
+  cursor: pointer;
+    
+  z-index: 10000;
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(15px);
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+}
+
+scroll-to-top.active-progress {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+}
+
+/* arrow dark mode */
+scroll-to-top::after {
+  position: absolute;
+  align-self: center;
+  justify-self: center;
+  
+  border-style: solid;
+	border-width: 0.25em 0.25em 0 0;
+	border-color: rgb(var(--bg-accent-color), 0.8);
+  content: '';
+	height: 0.45em;
+  width: 0.45em;
+	transform: rotate(-45deg);
+	  
+  cursor: pointer;
+  z-index: 1;
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+}
+
+scroll-to-top:hover {
+  box-shadow: inset 0 0 0 7px rgba(var(--bg-accent-color), 0.4);
+}
+
+scroll-to-top:hover::after {border-color: rgb(var(--bg-accent-color), 1.0);}
+
+scroll-to-top svg {
+  width: 100%;
+  height: 100%;
+}
+
+/* progress circle dark */
+scroll-to-top svg path {
+  stroke: rgba(var(--bg-accent-color), 1);
+  fill: none;
+  stroke-width: 4;
+  box-sizing: border-box;
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+}
+
+ul {list-style-type: none;}
+
+li:nth-of-type(2):not(:empty) {
+  color: red;
+}
