--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Oxanium:wght@200;300&display=swap');
 @import url('https://fonts.cdnfonts.com/css/agencyfb-2');
 @import url('https://fonts.googleapis.com/css?family=Electrolize');
-@import url('https://fonts.googleapis.com/css2?family=Markazi+Text&family=Teko:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Markazi+Text&family=Teko:wght@300;400;&display=swap');
 
 /*  RESET --------------------------------------------
 */  *:before, *:after, *, ::after, ::before {box-sizing: border-box;}
