--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -130,7 +130,7 @@
       grid-template-columns: var(--app-container-grid-template-columns);
       gap: var(--grid-gap);
       padding: 1rem;
-      height: 100vh; /* push HEADER/FOOTER to the top/bottom of viewport */
+      height: 100dvh; /* push HEADER/FOOTER to the top/bottom of viewport */
       overflow: hidden;
     }
 
@@ -354,7 +354,7 @@ html:before {
   top: 0;
   left: 0;
   right: 0;
-  height: 100vh;
+  height: 100dvh;
   z-index: -5;
   background: var(--bg-grd);
 }
@@ -364,7 +364,7 @@ body::before {
   top: 0;
   left: 0;
   right: 0;
-  height: 100vh;
+  height: 100dvh;
   background-attachment: initial;
   background-color: transparent;
   background-image: url('https://d7460n-app-with-resizer.pages.dev/assets/images/pattern.png');
@@ -379,7 +379,7 @@ html::after {
   left: 0;
   right: 0;
   z-index: -10;
-  height: 100vh;
+  height: 100dvh;
   background-color: rgba(var(--bg-02-color), var(--bg-02-opacity));
   background-image: url('https://d7460n-app-with-resizer.pages.dev/assets/images/logo.svg');
   background-repeat: no-repeat;
